# screenplay-dreamer

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
prompts/chat/: analyze_still.txt  screenplay_scene.txt  structure_scene.txt
prompts/system/: screenwriter.txt
src/auth/: jwt.py  middleware.py
src/core/: dependencies.py  settings.py
src/routes/: auth.py  gallery.py  images.py  screenplay.py
src/storage/: image_store.py  screenplay_store.py  user_store.py
src/writing/: screenplay_graph.py  template_loader.py
static/css/: style.css
templates/: about.html  base.html  gallery_items.html  index.html  login.html  logout.html  new.html  screenplay_view.html  user_screenplays.html
